--- a/src/tela/TelaSplash.form
+++ b/src/tela/TelaSplash.form
@@ -49,7 +49,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/tela/TelaSplash.gif"/>
+              <Image iconType="3" name="/images/TelaSplash.gif"/>
             </Property>
           </Properties>
           <Constraints>
